--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -57,7 +57,7 @@
 
                         <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                             @Html.FormTextFor(model => model.Name)
-                            @Html.FormTextFor(model => model.Location)
+                            @Html.FormTextFor(model => model.Location, hintText: "Enter town or postcode")
 
                             <button id="name-location-search-button" type="submit" class="button">
                                 Search
