Removing gov.uk banner from contact form header

--- a/tools/ContactForms/SFA.Apprenticeships.Web.ContactForms/Views/AccessRequest/SubmitAccessRequest.cshtml
+++ b/tools/ContactForms/SFA.Apprenticeships.Web.ContactForms/Views/AccessRequest/SubmitAccessRequest.cshtml
@@ -6,7 +6,7 @@
 
 @{
     ViewBag.Title = "Access request form";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutNoHeaderFooter.cshtml";
 }
 
 <div class="grid-wrapper">
