--- a/tools/ContactForms/SFA.Apprenticeships.Web.ContactForms/Views/EmployerEnquiry/SubmitEmployerEnquiry.cshtml
+++ b/tools/ContactForms/SFA.Apprenticeships.Web.ContactForms/Views/EmployerEnquiry/SubmitEmployerEnquiry.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewBag.Title = "Employer enquiry form";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutNoHeaderFooter.cshtml";
 }
 
 <div class="grid-wrapper">
