--- a/tools/ContactForms/SFA.Apprenticeships.Web.ContactForms/Views/Shared/ThankYou.cshtml
+++ b/tools/ContactForms/SFA.Apprenticeships.Web.ContactForms/Views/Shared/ThankYou.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = ViewBag.Title;
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutNoHeaderFooter.cshtml";
 }
 
 <div class="grid-wrapper">
