SCAA hierarchy in recruit site - amendments to have more control

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/main.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/main.scss
@@ -1,3 +1,5 @@
-@import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/main";
+@import "base";
+@import "components";
+@import "modules";
 
 /* Local project changes here for all browsers */
