getting UI to work!

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/main.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/main.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/base";
 @import "components";
 @import "modules";
 
