--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
@@ -2575,7 +2575,8 @@ input::-webkit-inner-spin-button {
   display: inline-block;
   padding-left: 5px; }
 
-.field-comment {
+.field-comment,
+.qa-comment {
   padding: 1em;
   background: #fff2d3; }
 
