--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/main.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/main.scss
@@ -1,3 +1,5 @@
-@import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/main";
+@import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/base";
+@import "components";
+@import "modules";
 
 /* Local project changes here for all browsers */
