--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/components/forms/_form-validation.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/components/forms/_form-validation.scss
@@ -113,6 +113,13 @@
   background: $error-background;
 }
 
+.field-validation-warning {
+  clear: left;
+  color: $warning-colour;
+  display: block;
+  margin-top: 8px;
+}
+
 // Validation message
 .validation-message {
   display: block;
