--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/main.css
@@ -2420,6 +2420,12 @@ input::-webkit-inner-spin-button {
 .form-control.input-validation-error {
   background: #fef7f7; }
 
+.field-validation-warning {
+  clear: left;
+  color: #f47738;
+  display: block;
+  margin-top: 8px; }
+
 .validation-message {
   display: block;
   font-family: "nta", Arial, sans-serif;
@@ -2575,7 +2581,8 @@ input::-webkit-inner-spin-button {
   display: inline-block;
   padding-left: 5px; }
 
-.field-comment {
+.field-comment,
+.qa-comment {
   padding: 1em;
   background: #fff2d3; }
 
@@ -4151,6 +4158,8 @@ details summary:focus {
   .account-info .account-link {
     padding: 0 5px; }
   .account-info .last-link {
+    padding-right: 0; }
+  .account-info .deleteMe {
     padding-right: 0; }
 
 .ogl-logo {
