edit/comment styles, part 2

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/_modules.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/_modules.scss
@@ -2,5 +2,5 @@
 @import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/modules/footer";
 @import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/modules/main-content";
 @import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/modules/search-results";
-@import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/modules/vacancies";
+@import "modules/vacancies";
 @import "../../../../SFA.Apprenticeships.Web.Common/Content/scss/modules/applications";
