--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -4384,6 +4384,8 @@ aside h2:first-child {
 .vac-title {
   margin: 0;
   font-weight: bold; }
+  .vac-title a {
+    text-decoration: none; }
 
 html:not(.no-js) [data-editable] {
   position: relative;
