--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -2,6 +2,7 @@
 @using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
 @using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies.Apprenticeship
 @using SFA.Apprenticeships.Web.Recruit.Constants
+@using SFA.Apprenticeships.Web.Raa.Common.Views.Shared.DisplayTemplates
 @{
     ViewBag.Title = "Recruit an Apprentice - Select framework and level";
 
@@ -24,7 +25,9 @@
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     @Html.FormTextAreaFor(m => m.Title, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-small" })
+    @Html.DisplayFor(m => m.TitleComment, "Comment")
     @Html.FormTextAreaFor(m => m.ShortDescription, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-medium" })
+    @Html.DisplayFor(m => m.ShortDescriptionComment, "Comment")
 
     <div class="form-group">
         <div class="blocklabel-single-container">
@@ -49,6 +52,7 @@
                     <a name="@Html.NameFor(m => m.FrameworkCodeName).ToString().ToLower()"></a>
                     <label for="@Html.NameFor(m => m.FrameworkCodeName)" class="form-label">Apprenticeship framework</label>
                     @Html.DropDownListFor(m => m.FrameworkCodeName, Model.SectorsAndFrameworks, new {@class = "para-btm-margin chosen-select", style = "min-width: 50%; margin-bottom: 15px;" })
+                    @Html.DisplayFor(m => m.FrameworkCodeNameComment, "Comment")
                     @Html.ValidationMessageFor(m => m.FrameworkCodeName)
                 </div>
 
@@ -72,6 +76,7 @@
                         @Html.RadioButtonFor(model => model.ApprenticeshipLevel, ApprenticeshipLevel.Degree, new {id = "apprenticeship-level-degree", aria_labelledby = "apprenticeship-level-label"}) Degree
                     </label>
                     @Html.ValidationMessageFor(m => m.ApprenticeshipLevel)
+                    @Html.DisplayFor(m => m.ApprenticeshipLevelComment, "Comment")
                 </div>
             </div>
 
@@ -131,10 +136,12 @@
                 <div class="form-group">
                     @* ReSharper disable once Html.IdNotResolved *@
                     @Html.FormTextFor(m => m.OfflineApplicationUrl, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, id = "apprenticeship-offline-application-url" })
+                    @Html.DisplayFor(m => m.OfflineApplicationUrlComment, "Comment")
                 </div>
                 <div class="form-group">
                     @* ReSharper disable once Html.IdNotResolved *@
                     @Html.FormTextAreaFor(m => m.OfflineApplicationInstructions, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-medium", id = "apprenticheship-offline-application-instructions" })
+                    @Html.DisplayFor(m => m.OfflineApplicationInstructionsComment, "Comment")
                     <br />
                 </div>
             </div>
