--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
@@ -18,7 +18,9 @@
     <section>
         <div class="form-group">
             @Html.FormTextAreaFor(m => m.FirstQuestion, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text", autofocus = "autofocus" })
+            @Html.DisplayFor(m => m.FirstQuestionComment, "Comment")
             @Html.FormTextAreaFor(m => m.SecondQuestion, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+            @Html.DisplayFor(m => m.SecondQuestionComment, "Comment")
         </div>
     </section>
     <div class="grid grid-1-2">
