--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyRequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyRequirementsProspects.cshtml
@@ -18,10 +18,15 @@
     <section>
         <div class="form-group">
             @Html.FormTextAreaFor(m => m.DesiredSkills, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text", autofocus = "autofocus" })
+            @Html.DisplayFor(m => m.DesiredSkillsComment, "Comment")
             @Html.FormTextAreaFor(m => m.PersonalQualities, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+            @Html.DisplayFor(m => m.PersonalQualitiesComment, "Comment")
             @Html.FormTextAreaFor(m => m.DesiredQualifications, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+            @Html.DisplayFor(m => m.DesiredQualificationsComment, "Comment")
             @Html.FormTextAreaFor(m => m.FutureProspects, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+            @Html.DisplayFor(m => m.FutureProspectsComment, "Comment")
             @Html.FormTextAreaFor(m => m.ThingsToConsider, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
+            @Html.DisplayFor(m => m.ThingsToConsiderComment, "Comment")
         </div>
     </section>
     <div class="grid grid-1-2">
